test/asm/local-truncated.err
warning: local-truncated.asm(10): [-Wlong-string]
    Symbol name too long, got truncated
ERROR: local-truncated.asm(10):
    'a000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001' already defined at local-truncated.asm(3)
warning: local-truncated.asm(11): [-Wlong-string]
    Symbol name too long, got truncated
error: Assembly aborted (1 error)!
